fix(textfield): fix scrollbar styles

--- a/packages/ui-core/src/components/TextField/TextField.less
+++ b/packages/ui-core/src/components/TextField/TextField.less
@@ -155,6 +155,11 @@
         .commonFont();
     }
 
+    &__field_textarea {
+        scrollbar-width: thin;
+        scrollbar-color: var(--spbSky2) transparent;
+    }
+
     &__field_textarea ~ &__label {
         top: 16px;
     }
